# STYLLER-EVO

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Cliente/: .gitignore  Tibia.pic
cmake/: CompilerOptimizations.cmake  CompilerWarnings.cmake
docs/: BUILD.md  CONFIGURATION.md
vc17/: TheOTXServer.aps  TheOTXServer.sln  TheOTXServer.vcxproj  TheOTXServer.vcxproj.filters  settings.props
